--- a/EFI/OC/Kexts/VoodooRMI.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/VoodooRMI.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20D91</string>
+	<string>19G2021</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -17,29 +17,27 @@
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.3.3</string>
+	<string>1.1</string>
 	<key>CFBundleSupportedPlatforms</key>
 	<array>
 		<string>MacOSX</string>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>1.3.3</string>
+	<string>1.1</string>
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12D4e</string>
-	<key>DTPlatformName</key>
-	<string>macosx</string>
+	<string>11E801a</string>
 	<key>DTPlatformVersion</key>
-	<string>11.1</string>
+	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>20C63</string>
+	<string>19G68</string>
 	<key>DTSDKName</key>
-	<string>macosx11.1</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1240</string>
+	<string>1170</string>
 	<key>DTXcodeBuild</key>
-	<string>12D4e</string>
+	<string>11E801a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>RMIDevice</key>
@@ -49,24 +47,26 @@
 			<key>Configuration</key>
 			<dict>
 				<key>DisableWhileTrackpointTimeout </key>
-				<integer>250</integer>
+				<integer>100</integer>
 				<key>DisableWhileTypingTimeout</key>
-				<integer>250</integer>
+				<integer>100</integer>
 				<key>FingerMajorMinorDiffMax</key>
 				<integer>3</integer>
 				<key>ForceTouchEmulation</key>
 				<true/>
 				<key>ForceTouchMinPressure</key>
 				<integer>90</integer>
+				<key>MaxObjectSize</key>
+				<integer>7</integer>
 				<key>MinYDiffThumbDetection</key>
 				<integer>200</integer>
-				<key>TrackpointDeadzone</key>
+				<key>TrackstickDeadzone</key>
 				<integer>1</integer>
-				<key>TrackpointMultiplier</key>
+				<key>TrackstickMultiplier</key>
 				<integer>10</integer>
-				<key>TrackpointScrollMultiplierX</key>
+				<key>TrackstickScrollMultiplierX</key>
 				<integer>30</integer>
-				<key>TrackpointScrollMultiplierY</key>
+				<key>TrackstickScrollMultiplierY</key>
 				<integer>30</integer>
 			</dict>
 			<key>IOClass</key>
@@ -83,19 +83,21 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
+	<string>10.13</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 1Revenger1. All rights reserved.</string>
+	<string>Copyright © 2020 1Revenger1. All rights reserved.</string>
 	<key>OSBundleCompatibleVersion</key>
 	<string>1.0.0</string>
 	<key>OSBundleLibraries</key>
 	<dict>
+		<key>com.apple.iokit.IOHIDFamily</key>
+		<string>2.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>com.apple.kpi.mach</key>
-		<string>15</string>
+		<string>18.5</string>
 	</dict>
 	<key>OSBundleRequired</key>
 	<string>Console</string>
