--- a/EFI/OC/Kexts/VoodooRMI.kext/Contents/PlugIns/RMISMBus.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/VoodooRMI.kext/Contents/PlugIns/RMISMBus.kext/Contents/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20D91</string>
+	<string>19G2021</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
@@ -27,19 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12D4e</string>
-	<key>DTPlatformName</key>
-	<string>macosx</string>
+	<string>11E801a</string>
 	<key>DTPlatformVersion</key>
-	<string>11.1</string>
+	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>20C63</string>
+	<string>19G68</string>
 	<key>DTSDKName</key>
-	<string>macosx11.1</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1240</string>
+	<string>1170</string>
 	<key>DTXcodeBuild</key>
-	<string>12D4e</string>
+	<string>11E801a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
 		<key>RMISMBus</key>
@@ -60,19 +58,21 @@
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
+	<string>10.13</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 1Revenger1. All rights reserved.</string>
+	<string>Copyright © 2020 1Revenger1. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
 		<key>com.1Revenger1.VoodooRMI</key>
 		<string>1.0</string>
+		<key>com.apple.iokit.IOHIDFamily</key>
+		<string>2.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>com.apple.kpi.mach</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>de.leo-labs.VoodooSMBus</key>
 		<string>3.0</string>
 	</dict>
