--- a/EFI/OC/Kexts/VoodooRMI.kext/Contents/PlugIns/VoodooTrackpoint.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/VoodooRMI.kext/Contents/PlugIns/VoodooTrackpoint.kext/Contents/Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>20D91</string>
+	<string>19G2021</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
-	<string>RMII2C</string>
+	<string>VoodooTrackpoint</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.1Revenger1.RMII2C</string>
+	<string>com.VoodooSMBus.VoodooTrackpoint</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>RMII2C</string>
+	<string>VoodooTrackpoint</string>
 	<key>CFBundlePackageType</key>
 	<string>KEXT</string>
 	<key>CFBundleShortVersionString</key>
@@ -27,58 +27,50 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>12D4e</string>
-	<key>DTPlatformName</key>
-	<string>macosx</string>
+	<string>11E801a</string>
 	<key>DTPlatformVersion</key>
-	<string>11.1</string>
+	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>20C63</string>
+	<string>19G68</string>
 	<key>DTSDKName</key>
-	<string>macosx11.1</string>
+	<string>macosx10.15</string>
 	<key>DTXcode</key>
-	<string>1240</string>
+	<string>1170</string>
 	<key>DTXcodeBuild</key>
-	<string>12D4e</string>
+	<string>11E801a</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>RMII2C</key>
+		<key>VoodooTrackpoint</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
-			<string>com.1Revenger1.RMII2C</string>
+			<string>com.VoodooSMBus.VoodooTrackpoint</string>
 			<key>IOClass</key>
-			<string>RMII2C</string>
+			<string>VoodooTrackpoint</string>
 			<key>IOProbeScore</key>
-			<integer>500</integer>
+			<integer>200</integer>
 			<key>IOPropertyMatch</key>
-			<array>
-				<dict>
-					<key>compatible</key>
-					<string>PNP0C50</string>
-				</dict>
-			</array>
+			<dict>
+				<key>VoodooTrackpointSupported</key>
+				<true/>
+			</dict>
 			<key>IOProviderClass</key>
-			<string>VoodooI2CDeviceNub</string>
-			<key>Legacy</key>
-			<false/>
+			<string>IOService</string>
 		</dict>
 	</dict>
 	<key>LSMinimumSystemVersion</key>
-	<string>10.11</string>
+	<string>10.14</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2021 1Revenger1. All rights reserved.</string>
+	<string>Copyright © 2020 VoodooSMBus. All rights reserved.</string>
 	<key>OSBundleLibraries</key>
 	<dict>
-		<key>com.1Revenger1.VoodooRMI</key>
-		<string>1.0</string>
-		<key>com.alexandred.VoodooI2C</key>
-		<string>2.5</string>
+		<key>com.apple.iokit.IOHIDFamily</key>
+		<string>2.0</string>
 		<key>com.apple.kpi.iokit</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>com.apple.kpi.libkern</key>
-		<string>15</string>
+		<string>18.5</string>
 		<key>com.apple.kpi.mach</key>
-		<string>15</string>
+		<string>18.5</string>
 	</dict>
 </dict>
 </plist>
