改显存为2G   以前的3G没啥太大总用 2G就够了

--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1011,7 +1011,7 @@
 				<key>framebuffer-stolenmem</key>
 				<data>AAAwAQ==</data>
 				<key>framebuffer-unifiedmem</key>
-				<data>AAAAwA==</data>
+				<data>AAAAgA==</data>
 				<key>model</key>
 				<string>Intel HD Graphics 620</string>
 			</dict>
