改平台为 MacBookPro15,2 支持mac 12.0+ 下的【隔空播放接收器】 修复OC图形启动界面 哔 一声的报警

--- a/EFI/OC/Kexts/USBPorts.kext/Contents/Info.plist
+++ b/EFI/OC/Kexts/USBPorts.kext/Contents/Info.plist
@@ -22,7 +22,7 @@
 	<string>1.0</string>
 	<key>IOKitPersonalities</key>
 	<dict>
-		<key>MacBookPro14,1-XHC</key>
+		<key>MacBookPro15,2-XHC</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
@@ -41,11 +41,11 @@
 				<key>kUSBSleepPortCurrentLimit</key>
 				<integer>2100</integer>
 				<key>kUSBSleepPowerSupply</key>
-				<integer>5100</integer>
+				<integer>2600</integer>
 				<key>kUSBWakePortCurrentLimit</key>
 				<integer>2100</integer>
 				<key>kUSBWakePowerSupply</key>
-				<integer>5100</integer>
+				<integer>3200</integer>
 				<key>port-count</key>
 				<data>
 				EAAAAA==
@@ -54,12 +54,8 @@
 				<dict>
 					<key>HS01</key>
 					<dict>
-						<key>Comment</key>
-						<string>左测USB大口</string>
 						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>name</key>
-						<string>HS01</string>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						AQAAAA==
@@ -67,12 +63,8 @@
 					</dict>
 					<key>HS02</key>
 					<dict>
-						<key>Comment</key>
-						<string>右侧USB大口</string>
 						<key>UsbConnector</key>
-						<integer>3</integer>
-						<key>name</key>
-						<string>HS02</string>
+						<integer>0</integer>
 						<key>port</key>
 						<data>
 						AgAAAA==
@@ -80,12 +72,8 @@
 					</dict>
 					<key>HS04</key>
 					<dict>
-						<key>Comment</key>
-						<string>左侧TYPEC 1号</string>
 						<key>UsbConnector</key>
 						<integer>9</integer>
-						<key>name</key>
-						<string>HS04</string>
 						<key>port</key>
 						<data>
 						BAAAAA==
@@ -93,12 +81,8 @@
 					</dict>
 					<key>HS07</key>
 					<dict>
-						<key>Comment</key>
-						<string>内置蓝牙</string>
 						<key>UsbConnector</key>
 						<integer>255</integer>
-						<key>name</key>
-						<string>HS07</string>
 						<key>port</key>
 						<data>
 						BwAAAA==
@@ -106,12 +90,8 @@
 					</dict>
 					<key>HS08</key>
 					<dict>
-						<key>Comment</key>
-						<string>内置摄像头</string>
 						<key>UsbConnector</key>
 						<integer>255</integer>
-						<key>name</key>
-						<string>HS08</string>
 						<key>port</key>
 						<data>
 						CAAAAA==
@@ -119,12 +99,8 @@
 					</dict>
 					<key>SS01</key>
 					<dict>
-						<key>Comment</key>
-						<string>左侧USB大口</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
-						<key>name</key>
-						<string>SS01</string>
 						<key>port</key>
 						<data>
 						DQAAAA==
@@ -132,12 +108,8 @@
 					</dict>
 					<key>SS02</key>
 					<dict>
-						<key>Comment</key>
-						<string>右侧USB大口</string>
 						<key>UsbConnector</key>
 						<integer>3</integer>
-						<key>name</key>
-						<string>SS02</string>
 						<key>port</key>
 						<data>
 						DgAAAA==
@@ -147,8 +119,6 @@
 					<dict>
 						<key>UsbConnector</key>
 						<integer>255</integer>
-						<key>name</key>
-						<string>SS03</string>
 						<key>port</key>
 						<data>
 						DwAAAA==
@@ -156,12 +126,8 @@
 					</dict>
 					<key>SS04</key>
 					<dict>
-						<key>Comment</key>
-						<string>左侧TYPEC 1号</string>
 						<key>UsbConnector</key>
 						<integer>9</integer>
-						<key>name</key>
-						<string>SS04</string>
 						<key>port</key>
 						<data>
 						EAAAAA==
@@ -170,32 +136,32 @@
 				</dict>
 			</dict>
 			<key>model</key>
-			<string>MacBookPro14,1</string>
+			<string>MacBookPro15,2</string>
 		</dict>
-		<key>MacBookPro14,1-XHC2</key>
+		<key>MacBookPro15,2-XHC-8086_15c1</key>
 		<dict>
 			<key>CFBundleIdentifier</key>
 			<string>com.apple.driver.AppleUSBMergeNub</string>
 			<key>IOClass</key>
 			<string>AppleUSBMergeNub</string>
 			<key>IONameMatch</key>
-			<string>XHC2</string>
+			<string>XHC</string>
 			<key>IOPCIPrimaryMatch</key>
 			<string>0x15c18086</string>
 			<key>IOProbeScore</key>
 			<integer>5000</integer>
 			<key>IOProviderClass</key>
-			<string>AppleUSBXHCIAR</string>
+			<string>AppleUSBXHCIARLP</string>
 			<key>IOProviderMergeProperties</key>
 			<dict>
 				<key>kUSBSleepPortCurrentLimit</key>
 				<integer>2100</integer>
 				<key>kUSBSleepPowerSupply</key>
-				<integer>5100</integer>
+				<integer>2600</integer>
 				<key>kUSBWakePortCurrentLimit</key>
 				<integer>2100</integer>
 				<key>kUSBWakePowerSupply</key>
-				<integer>5100</integer>
+				<integer>3200</integer>
 				<key>port-count</key>
 				<data>
 				AwAAAA==
@@ -204,25 +170,17 @@
 				<dict>
 					<key>HS01</key>
 					<dict>
-						<key>Comment</key>
-						<string>左侧TYPEC 2号</string>
 						<key>UsbConnector</key>
-						<integer>8</integer>
-						<key>name</key>
-						<string>HS01</string>
+						<integer>9</integer>
 						<key>port</key>
 						<data>
 						AQAAAA==
 						</data>
 					</dict>
-					<key>SSP1</key>
+					<key>SS01</key>
 					<dict>
-						<key>Comment</key>
-						<string>左侧TYPEC 2 号</string>
 						<key>UsbConnector</key>
 						<integer>9</integer>
-						<key>name</key>
-						<string>SSP1</string>
 						<key>port</key>
 						<data>
 						AwAAAA==
@@ -231,7 +189,7 @@
 				</dict>
 			</dict>
 			<key>model</key>
-			<string>MacBookPro14,1</string>
+			<string>MacBookPro15,2</string>
 		</dict>
 	</dict>
 	<key>OSBundleRequired</key>
